Styled activity plans consistently with activity logs

--- a/client/src/heartsteps/activity-logs/activity-log.component.html
+++ b/client/src/heartsteps/activity-logs/activity-log.component.html
@@ -1,4 +1,3 @@
-<i class="icon activity-type {{type}}"></i>
-<span>{{type}}</span>
+<span>{{type}}, {{activityLevel}}</span>
 <span>{{start}} - {{end}}</span>
-<span>{{totalMinutes}} min earned</span>
+<span>{{earnedMinutes}} min earned</span>
