--- a/client/src/heartsteps/activity-logs/activity-log.component.scss
+++ b/client/src/heartsteps/activity-logs/activity-log.component.scss
@@ -1,6 +1,7 @@
 .heartsteps-activity-log,
 heartsteps-activity-log {
     @extend .activity-type;
+    display: block;
     padding-left: 3em;
 
     &:before {
