Stylized intensity form controls

--- a/client/src/heartsteps/activity-logs/log-form.component.html
+++ b/client/src/heartsteps/activity-logs/log-form.component.html
@@ -8,11 +8,17 @@
         <ul>
             <li>
                 <input id="activity-plan-intensity-moderate" type="radio" name="vigorous" formControlName="vigorous" [value]="false" />
-                <label for="activity-plan-intensity-moderate">Moderate</label>
+                <label for="activity-plan-intensity-moderate">
+                    Moderate
+                    <span>1x time credit</span>
+                </label>
             </li>
             <li>
                 <input id="activity-plan-intensity-vigorous" type="radio" name="vigorous" formControlName="vigorous" [value]="true" />
-                <label for="activity-plan-intensity-vigorous">Vigorous</label>
+                <label for="activity-plan-intensity-vigorous">
+                    Vigorous
+                    <span>2x time credit</span>
+                </label>
             </li>
         </ul>
     </fieldset>
