Add mark incomplete button to plans

--- a/client/src/heartsteps/activity-plans/day-plan.component.html
+++ b/client/src/heartsteps/activity-plans/day-plan.component.html
@@ -4,4 +4,4 @@
     </li>
 </ul>
 <p *ngIf="!plans">Nothing planned.</p>
-<button *ngIf="canAddActivity" (click)="addActivity()" >Add an activity</button>
+<button *ngIf="canAddActivity" (click)="addActivity()" class="bottom" >Add an activity</button>
