--- a/client/src/heartsteps/activity-plans/plan-form.component.html
+++ b/client/src/heartsteps/activity-plans/plan-form.component.html
@@ -8,11 +8,17 @@
         <ul>
             <li>
                 <input id="activity-plan-intensity-moderate" type="radio" name="vigorous" formControlName="vigorous" [value]="false" />
-                <label for="activity-plan-intensity-moderate">Moderate</label>
+                <label for="activity-plan-intensity-moderate">
+                    Moderate
+                    <span>1x time credit</span>
+                </label>
             </li>
             <li>
                 <input id="activity-plan-intensity-vigorous" type="radio" name="vigorous" formControlName="vigorous" [value]="true" />
-                <label for="activity-plan-intensity-vigorous">Vigorous</label>
+                <label for="activity-plan-intensity-vigorous">
+                    Vigorous
+                    <span>2x time credit</span>
+                </label>
             </li>
         </ul>
     </fieldset>
@@ -33,8 +39,9 @@
     <div class="controls">
         <p *ngIf="error">{{error}}</p>
         <button *ngIf="!updateView" (click)="save()" >Save</button>
-        <button *ngIf="updateView && !isComplete" (click)="save()" >Update</button>
-        <button *ngIf="updateView && !isComplete" (click)="complete()">Complete</button>
-        <button *ngIf="updateView" (click)="delete()">Delete</button>
+        <button *ngIf="!activityPlan.complete && updateView" (click)="complete()" class="primary">Complete</button>
+        <button *ngIf="activityPlan.complete && updateView" (click)="uncomplete()">Mark incomplete</button>
+        <button *ngIf="updateView && !activityPlan.complete" (click)="save()" >Update</button>
+        <button *ngIf="updateView && !activityPlan.complete" (click)="delete()" class="danger">Delete</button>
     </div>
 </form>
