--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -38,7 +38,7 @@ $color-primary: #488aff;
 $color-secondary: #F57B55;
 $color-danger: #f53d3d;
 $color-gray-light: #f4f4f4;
-$color-gray: #555f61;
+$color-gray: #a4a4a4;
 $color-gray-dark: #3d3d3d;
 $color-white: #ffffff;
 $color-block: #000000;
