--- a/client/src/heartsteps/activity-plans/plan-form.component.html
+++ b/client/src/heartsteps/activity-plans/plan-form.component.html
@@ -25,8 +25,13 @@
     <app-duration-field 
         formControlName="duration"
         label="Duration"
-    >
+        >
     </app-duration-field>
+    <app-date-field
+        formControlName="date"
+        label="Date"
+        >
+    </app-date-field>
     <ion-item>
         <ion-label for="activity-plan-date">Date</ion-label>
         <ion-select id="activity-plan-date" formControlName="date">
