--- a/client/src/infrastructure/form/forms.scss
+++ b/client/src/infrastructure/form/forms.scss
@@ -13,7 +13,8 @@
         flex: 0 0 auto;
     }
 
-    > input {
+    > input,
+    > button {
         flex: 1 1 auto;
         padding: 0.5em;
         border-width: 0px;
@@ -23,22 +24,47 @@
         }
     }
 
+    > button {
+        color: $text-color;
+        text-align: right;
+
+        &:hover,
+        &:focus,
+        &:active {
+            box-shadow: none;
+        }
+    }
+
     > input[type=number] {
         text-align: right;
     }
 
 }
 
+.heartsteps-form-field.is-invalid {
+    border-bottom-color: $color-danger;
+
+    &:after {
+        content: '';
+        display: block;
+        width: 1em;
+        height: 1em;
+        margin: 0px 0.5em;
+        background-color: $color-danger;
+        mask-image: url('../assets/error-icon.svg');
+        mask-repeat: no-repeat;
+        mask-position: 50% 50%;
+        mask-size: 100% 100%;
+    }
+}
+
+.heartsteps-form-field.is-focused.is-invalid,
 .heartsteps-form-field.is-focused {
     border-bottom-color: $color-primary;
 
     label {
         color: $color-primary;
     }
-}
-
-.heartsteps-form-field.is-invalid {
-    border-bottom-color: $color-danger;
 }
 
 .heartsteps-form-field.is-disabled {
