Add fields for contact page

--- a/client/src/heartsteps/activity-plans/plan-form.component.html
+++ b/client/src/heartsteps/activity-plans/plan-form.component.html
@@ -32,16 +32,11 @@
         label="Date"
         >
     </app-date-field>
-    <ion-item>
-        <ion-label for="activity-plan-date">Date</ion-label>
-        <ion-select id="activity-plan-date" formControlName="date">
-            <ion-option *ngFor="let date of availableDates">{{date}}</ion-option>
-        </ion-select>
-    </ion-item>
-    <ion-item>
-        <ion-label>Start time</ion-label>
-        <ion-datetime formControlName="time" displayFormat="h:mm a" minuteValues="0,15,30,45"></ion-datetime>
-    </ion-item>
+    <app-time-field
+        formControlName="time"
+        label="Time"
+        >
+    </app-time-field>
     <div class="controls">
         <p *ngIf="error">{{error}}</p>
         <button *ngIf="!updateView" (click)="save()" >Save</button>
