--- a/client/src/infrastructure/form/time-field.component.html
+++ b/client/src/infrastructure/form/time-field.component.html
@@ -1,8 +1,10 @@
-<label for="{{name}}">{{label}}</label>
-<button id="{{name}}"
-    (click)="time()"
-    (focus)="isFocused()"
-    (blur)="isBlurred()"
-    >
-    {{value}}
-</button>
+<div class="input">
+    <label for="{{name}}">{{label}}</label>
+    <button id="{{name}}"
+        (click)="time()"
+        (focus)="isFocused()"
+        (blur)="isBlurred()"
+        >
+        {{value}}
+    </button>
+</div>
