--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -169,13 +169,13 @@ article.page {
     border: 0px;
 
     &:focus, &:hover {
-        box-shadow: inset 0 0 0em 0px $color-primary;
-        text-shadow: $color-gray-light 0px 0px 1em;
+        box-shadow: none;
+        opacity: 0.8;
     }
 
     &:active {
-        box-shadow: inset 0 0 0em 0px $color-primary;
-        text-shadow: $color-primary 0px 0px 1em;
+        box-shadow: none;
+        opacity: 0.5;
     }
 }
 
