--- a/client/src/infrastructure/form/time-field.component.html
+++ b/client/src/infrastructure/form/time-field.component.html
@@ -1,7 +1,8 @@
 <div class="input">
     <label for="{{name}}">{{label}}</label>
     <button id="{{name}}"
-        (click)="time()"
+        type="button"
+        (click)="select()"
         (focus)="isFocused()"
         (blur)="isBlurred()"
         >
