--- a/client/src/theme/forms.scss
+++ b/client/src/theme/forms.scss
@@ -21,6 +21,10 @@ form {
     label {
         @extend .label;
     }
+
+    input[type=submit] {
+        @extend .heartsteps-button;
+    }
 }
 
 form > fieldset {
