--- a/client/src/infrastructure/form/date-field.component.html
+++ b/client/src/infrastructure/form/date-field.component.html
@@ -1,9 +1,8 @@
 <div class="input">
     <label for="{{name}}">{{label}}</label>
     <button id="{{name}}"
+        type="button"
         (click)="select()"
-        (focus)="isFocused()"
-        (blur)="isBlurred()"
         >
         {{value}}
     </button>
