--- a/client/src/theme/forms.scss
+++ b/client/src/theme/forms.scss
@@ -1,4 +1,6 @@
-form {
+form,
+.form,
+form > fieldset {
     display: flex;
     flex-direction: column;
     font-size: 1.6rem;
@@ -25,10 +27,6 @@ form {
     input[type=submit] {
         @extend .heartsteps-button;
     }
-}
-
-form > fieldset {
-    @extend form;
 }
 
 form.map {
