Add modal dialog wrapper

--- a/client/src/heartsteps/activity-plans/plan-modal.component.html
+++ b/client/src/heartsteps/activity-plans/plan-modal.component.html
@@ -1,7 +1,5 @@
-<article class="page">
-    <header>
-        <h2>Activity Plan</h2>
-        <a class="back" (click)="dismiss()">Back</a>
-    </header>
+<app-modal-dialog
+    title="Activity Plan"
+    >
     <activity-plan-form [plan]="activityPlan" (saved)="dismiss()"></activity-plan-form>
-</article>
+</app-modal-dialog>
