Activity type and form styling

--- a/client/src/heartsteps/activity-logs/activity-log.component.html
+++ b/client/src/heartsteps/activity-logs/activity-log.component.html
@@ -1,3 +1,5 @@
-<span>{{type}}, {{activityLevel}}</span>
-<span>{{start}} - {{end}}</span>
-<span>{{earnedMinutes}} min earned</span>
+<dl>
+    <dd>{{type}}, {{activityLevel}}</dd>
+    <dd>{{start}} - {{end}}</dd>
+    <dd>{{earnedMinutes}} min earned</dd>
+</dl>
