--- a/client/src/heartsteps/activity-logs/activity-log.component.scss
+++ b/client/src/heartsteps/activity-logs/activity-log.component.scss
@@ -1,20 +1,8 @@
 .heartsteps-activity-log,
 heartsteps-activity-log {
     @extend .activity-type;
-    display: block;
-    padding-left: 3em;
 
-    &:before {
-        position: absolute;
-        left: 0px;
-        top: 50%;
-        width: 2em;
-        height: 2em;
-        transform: translate(0%, -50%);
-        margin: 0px;
-    }
-
-    span {
-        display: block;
-    }
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
