--- a/client/src/heartsteps/activity-plans/day-plan.component.html
+++ b/client/src/heartsteps/activity-plans/day-plan.component.html
@@ -1,6 +1,6 @@
 <ul *ngIf="plans">
     <li *ngFor="let plan of plans" (click)="showPlan(plan)">
-        <activity-plan [plan]="plan"></activity-plan>
+        <heartsteps-activity-plan [plan]="plan"></heartsteps-activity-plan>
     </li>
 </ul>
 <p *ngIf="!plans">Nothing planned.</p>
