--- a/client/src/heartsteps/activity-plans/plan.component.html
+++ b/client/src/heartsteps/activity-plans/plan.component.html
@@ -1,4 +1,6 @@
-<span>{{activityType}}, {{activityLevel}}</span>
-<span>{{start}} - {{end}}</span>
-<span *ngIf="complete">{{duration}} min complete</span>
-<span *ngIf="!complete">{{duration}} min planned</span>
+<dl>
+    <dd>{{activityType}}, {{activityLevel}}</dd>
+    <dd>{{start}} - {{end}}</dd>
+    <dd *ngIf="complete">{{duration}} min complete</dd>
+    <dd *ngIf="!complete">{{duration}} min planned</dd>
+</dl>
