--- a/client/src/heartsteps/activity-plans/plan.component.scss
+++ b/client/src/heartsteps/activity-plans/plan.component.scss
@@ -1,13 +1,9 @@
-activity-plan {
-    @extend .heartsteps-activity-log;
+heartsteps-activity-plan {
+    @extend heartsteps-activity-log;
 
-    padding-right: 3em;
     &:after {
         content: "";
-        position: absolute;
-        right: 0px;
-        top:0px;
-        height: 100%;
+        height: 2em;
         width: 2em;
         mask-image: url('../assets/unchecked.svg');
         mask-repeat: no-repeat;
