--- a/client/src/infrastructure/form/forms.scss
+++ b/client/src/infrastructure/form/forms.scss
@@ -1,4 +1,20 @@
 
+.heartsteps-form {
+
+    > .controls {
+        margin: 0em 0em;
+        > * {
+            margin: 0.5em 0em;
+        }
+        [app-form-controls] {
+            margin: 0px;
+            > * {
+                margin:0.5em 0em;
+            }
+        }
+    }
+}
+
 .heartsteps-form-input {
     display: flex;
     flex-direction: row;
@@ -111,5 +127,13 @@
 .heartsteps-form-field.is-disabled {
     > .heartsteps-form-input {
         border-bottom-color: $color-gray-light;
+    }
+}
+
+fieldset.heartsteps-form-field {
+    legend {
+        @extend label;
+        font-weight: normal;
+        padding: 0em;
     }
 }
