--- a/client/src/heartsteps/activity-plans/plan-form.component.html
+++ b/client/src/heartsteps/activity-plans/plan-form.component.html
@@ -1,31 +1,19 @@
 <app-form 
     [formGroup]="planForm"
     [defaultSubmit]="false"
+    [error]="error"
+    (onSubmit)="save()"
     >
     <heartsteps-activity-type-field
         formControlName="activity"
         label="Activity type"
         >
     </heartsteps-activity-type-field>
-    <fieldset class="intensity input-group">
-        <legend>Intensity</legend>
-        <ul>
-            <li>
-                <input id="activity-plan-intensity-moderate" type="radio" name="vigorous" formControlName="vigorous" [value]="false" />
-                <label for="activity-plan-intensity-moderate">
-                    Moderate
-                    <span>1x time credit</span>
-                </label>
-            </li>
-            <li>
-                <input id="activity-plan-intensity-vigorous" type="radio" name="vigorous" formControlName="vigorous" [value]="true" />
-                <label for="activity-plan-intensity-vigorous">
-                    Vigorous
-                    <span>2x time credit</span>
-                </label>
-            </li>
-        </ul>
-    </fieldset>
+    <heartsteps-activity-intensity-field
+        formControlName="vigorous"
+        label="Intensity"
+        >
+    </heartsteps-activity-intensity-field>
     <app-duration-field 
         formControlName="duration"
         label="Duration"
