--- a/client/src/heartsteps/activity-plans/plan-form.component.html
+++ b/client/src/heartsteps/activity-plans/plan-form.component.html
@@ -1,3 +1,4 @@
+<button *ngIf="!activityPlan.complete && updateView" (click)="complete()" class="primary">Complete</button>
 <app-form 
     [formGroup]="planForm"
     [defaultSubmit]="false"
@@ -30,10 +31,9 @@
         >
     </app-time-field>
     <div app-form-controls>
-        <button *ngIf="!updateView" (click)="save()" >Save</button>
-        <button *ngIf="!activityPlan.complete && updateView" (click)="complete()" class="primary">Complete</button>
-        <button *ngIf="activityPlan.complete && updateView" (click)="uncomplete()">Mark incomplete</button>
-        <button *ngIf="updateView && !activityPlan.complete" (click)="save()" >Update</button>
-        <button *ngIf="updateView && !activityPlan.complete" (click)="delete()" class="danger">Delete</button>
+        <input *ngIf="!updateView" type="submit" value="Save" />
+        <input *ngIf="updateView && !activityPlan.complete" type="submit" value="Update" />
     </div>
 </app-form>
+<button *ngIf="updateView && !activityPlan.complete" (click)="delete()" class="danger">Delete</button>
+<button *ngIf="activityPlan.complete && updateView" (click)="uncomplete()">Mark incomplete</button>
