Add available dates to activity plan form

--- a/client/src/heartsteps/activity-plans/plan-form.component.html
+++ b/client/src/heartsteps/activity-plans/plan-form.component.html
@@ -23,6 +23,7 @@
     <app-date-field
         formControlName="date"
         label="Date"
+        [available-dates]="availableDates"
         >
     </app-date-field>
     <app-time-field
