--- a/client/src/infrastructure/increment.component.html
+++ b/client/src/infrastructure/increment.component.html
@@ -1,3 +1,3 @@
 <span>{{amount}} {{units}}</span>
 <button class="add" (click)="add()">Add</button>
-<button class="remove" (click)="remove()">Remove</button>
+<button class="subtract" (click)="remove()">Remove</button>
