--- a/client/src/infrastructure/increment.component.scss
+++ b/client/src/infrastructure/increment.component.scss
@@ -18,7 +18,7 @@ heartsteps-increment {
     }
 
     > button.add,
-    > button.remove {
+    > button.subtract {
         display: block;
         width: 2em;
         height: 2em;
@@ -30,26 +30,25 @@ heartsteps-increment {
         border-radius: 1em;
 
         &:before {
-            content: "-";
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            content: "";
+            width: 100%;
+            height: 100%;
             display: block;
-            color: $color-white;
-            text-indent: 0px;
-            font-size: 2em;
+            background-color: $color-white;
+            mask-image: url('../assets/icon-remove.svg');
+            mask-position: 50% 50%;
+            mask-repeat: no-repeat;
         }
     }
 
     > button.add {
         order: 2;
         &:before {
-            content: "+";
+            mask-image: url('../assets/icon-add.svg');
         }
     }
 
-    .remove {
+    .subtract {
         order: -1;
     }
 }
