--- a/client/src/pages/weekly-survey/survey.component.html
+++ b/client/src/pages/weekly-survey/survey.component.html
@@ -8,6 +8,6 @@
         <heartsteps-range></heartsteps-range>
     </div>
     <div class="controls">
-        <button (click)="next()">Next</button>
+        <button (click)="nextPage()">Next</button>
     </div>
 </form>
