Remove loading modal from update daily summary

--- a/client/src/heartsteps/daily-summaries/daily-activities-update.scss
+++ b/client/src/heartsteps/daily-summaries/daily-activities-update.scss
@@ -6,6 +6,10 @@ heartsteps-activity-daily-update {
         @extend button.bottom;
     }
 
+    button.is-loading {
+        opacity: 0.7;
+    }
+
     button:before {
         content: '';
         display: inline-block;
