Clean up css container inheritence

--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -1,5 +1,39 @@
 page-home {
-    > .page > nav {
+    @extend .page;
+    
+     > nav {
+
+        > * {
+            display: block;
+            position: relative;
+            width: 70px;
+            padding: $space-size/2 0px;
+            padding-top: 50px;
+            text-align: center;
+            font-size: 12px;
+            text-decoration: none;
+            color: $color-gray-dark;
+        }
+        > *:before {
+            content: ' ';
+            mask-repeat: no-repeat;
+            mask-position: 50% 50%;
+            background-color: $color-gray-dark;
+            display: block;
+            position: absolute;
+            top: $space-size/2;
+            left: 50%;
+            transform: translate(-50%, 0%);
+            height: 35px;
+            width: 35px;
+        }
+        > .active {
+            color: $color-primary;
+            &:before {
+                background-color: $color-primary;
+            }
+        }
+
         .dashboard:before {
             mask-image: url('../assets/dashboard.svg');
         }
