Add activity-enjoyed field

--- a/client/src/heartsteps/activity-logs/log-form.component.html
+++ b/client/src/heartsteps/activity-logs/log-form.component.html
@@ -25,5 +25,10 @@
         label="Time"
         >
     </app-time-field>
+    <activity-enjoyed-field
+        formControlName="enjoyed"
+        label="How much did you enjoy this activity?"
+        >
+    </activity-enjoyed-field>
 </app-form>
 <button class="danger" (click)="delete()" >Delete</button>
